--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.8.2",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
-    "env": "^0.0.2"
+    "env": "^0.0.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
